# Portage

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Caddyfile  LICENSE  README.md  code-migration-agent-plan.md  code-migration-agent-planV2.md  docker-compose.stage1.yml  docker-compose.yml  portage-corpus-candidates.md  portage-p8-deployment-runbook.md  portage-recipe-excellence-plan.md  portage-v2-forward-plan.md
apps/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_create_jobs.py  0002_job_results.py  0003_create_tasks.py  0004_task_attempts_log.py  0005_eval_runs_metrics.py  0006_auth_tables.py
apps/backend/docker/: entrypoint-api.sh
apps/backend/sandbox/: Dockerfile.sandbox  run-tests
apps/backend/src/portage_agent/: __init__.py  config.py  logging_conf.py
apps/backend/src/portage_agent/agent/: __init__.py  checkpointer.py  graph.py  nodes.py  repo_source.py  runner.py  state.py
apps/backend/src/portage_agent/agent/nodes/: __init__.py  artifact_plan.py  common.py  executable_cut.py  execute.py  ingest.py  oracle.py  plan.py  recover.py  redaction.py  report.py  verify.py
apps/backend/src/portage_agent/api/: __init__.py  app.py  schemas.py
apps/backend/src/portage_agent/auth/: __init__.py  deps.py  github.py  routes.py  service.py  tokens.py
apps/backend/src/portage_agent/cli/: __init__.py  main.py
apps/backend/src/portage_agent/core/: __init__.py  interfaces.py
apps/backend/src/portage_agent/db/: __init__.py  base.py  models.py  session.py  task_store.py
apps/backend/src/portage_agent/eval/: __init__.py  __main__.py  corpus.py  harness.py
apps/backend/src/portage_agent/llm/: __init__.py  litellm_provider.py
apps/backend/src/portage_agent/mcp/: __init__.py  __main__.py  server.py
apps/backend/src/portage_agent/recipes/: __init__.py  _flask_analysis.py  _flask_runtime.py  _flask_web.py  base.py  flask_test_compat.py  flask_to_fastapi.py
apps/backend/src/portage_agent/retrieval/: __init__.py  mcp.py
apps/backend/src/portage_agent/sandbox/: __init__.py  docker.py  report.py
apps/backend/src/portage_agent/storage/: __init__.py  local.py
apps/backend/src/portage_agent/worker/: __init__.py  __main__.py  main.py  queue.py
apps/backend/tests/: test_artifact_plan.py  test_auth_service.py  test_caller_contract.py  test_cli.py  test_cluster_generation.py  test_contract_check.py  test_contract_prompt.py  test_dependency_order.py  test_eval_plan_only.py  test_executable_cuts.py  test_execution_batches.py  test_flask_test_compat.py  test_imported_bindings.py  test_interface_contract.py  test_interface_manifest.py  test_oracle_integrity.py  test_recovery_progress.py  test_redaction.py  test_sanctioned_normalization.py  test_seam_plan.py
apps/backend/tests/fixtures/flask_app/: pyproject.toml
apps/backend/tests/fixtures/flask_app/src/flaskapp/: __init__.py  api.py  app.py  store.py
apps/backend/tests/fixtures/flask_app/tests/: conftest.py  test_api.py
apps/backend/tests/fixtures/flask_structural/: pyproject.toml
apps/backend/tests/fixtures/flask_structural/src/structapp/: __init__.py  db.py  views.py
apps/backend/tests/fixtures/flask_structural/tests/: conftest.py  test_structural.py
apps/backend/tests/fixtures/sample_repo/: pyproject.toml
apps/backend/tests/fixtures/sample_repo/src/sample/: __init__.py  models.py  service.py
apps/backend/tests/fixtures/sample_repo/tests/: test_models.py
apps/frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/components/: AppShell.tsx  ReviewGuide.tsx  ui.tsx
apps/frontend/app/eval/: page.tsx
apps/frontend/app/guide/: page.tsx
apps/frontend/app/jobs/[id]/: page.tsx
apps/frontend/app/lib/: api.ts
corpus/: FINDINGS.md  README.md  corpus.toml
docs/: METHODOLOGY.md  USAGE.md
docs/assets/: kill-resume.cast
docs/assets/portfolio/: portage-deep-dive.md  portage.md
docs/superpowers/plans/: 2026-07-09-r1-interface-consistency.md
scripts/: demo_kill_resume.sh  dod_check.sh  kill-resume.tape  phase1_check.sh  phase2_check.sh  phase3_check.sh  phase4_smoke.sh  phase7_check.sh  vet_corpus_repo.sh
