[project]
name = "portage-agent"
version = "0.0.0"
description = "Portage — autonomous code-migration agent (backend)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # Data layer (domain tables) — async SQLAlchemy + asyncpg, Alembic
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Config
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # Agent runtime + Postgres checkpointer (uses psycopg3, NOT asyncpg)
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2",
]

# NOTE: litellm is part of the locked stack (model ladder) but is deliberately
# NOT a Phase 0 dependency — the `llm` interface is a Protocol stub for now.
# It gets wired (with the real adapter) in Phase 2. Keeping the skeleton lean.

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portage_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
