[project]
name = "portage-agent"
version = "0.0.0"
description = "Portage — autonomous code-migration agent (backend)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # Data layer (domain tables) — async SQLAlchemy + asyncpg, Alembic
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Config
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # Agent runtime + Postgres checkpointer (uses psycopg3, NOT asyncpg)
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2",
    # MCP client SDK — talks to code-review-graph's `serve` (stdio) MCP server. The CRG
    # server itself is installed isolated in the worker image (uv tool), not here.
    "mcp>=1.2",
    # LLM model ladder — one interface across Bedrock / Azure OpenAI / Gemini / Anthropic.
    # Wired in Phase 2 (Execute node). Pinned via uv.lock.
    "litellm>=1.55",
    # CLI (Phase 5a) — thin sync REST client over the control-plane API.
    "httpx>=0.27",
    # Auth (Phase 7): access JWTs + per-route rate limiting.
    "pyjwt>=2.8",
    "slowapi>=0.1.9",
]

[project.scripts]
portage = "portage_agent.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portage_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: `Depends(...)` in argument defaults is THE FastAPI dependency idiom.
extend-per-file-ignores = { "src/portage_agent/api/**" = ["B008"], "src/portage_agent/auth/**" = ["B008"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
# One event loop for the whole session: the module-level async engine pools connections
# bound to a loop; per-test loops would poison the pool ("Event loop is closed").
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
# The fixture repo under tests/fixtures is a separate package with its own tests — it is
# ingested/run by the sandbox, never collected by the backend's own suite.
addopts = "--ignore=tests/fixtures"
