[project]
name = "sample"
version = "0.1.0"
description = "A tiny pydantic-using package — Portage Phase 1 test fixture."
requires-python = ">=3.10"
dependencies = ["pydantic>=2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
